--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
-src="https://webfs.yun.kugou.com/202010021343/b3623d5017651f5c1e3733b64733cac1/G182/M08/11/19/VocBAF38m0iAcRCqACWdj1Qncko089.mp3">
-</audio>
+<embed src="https://webfs.yun.kugou.com/202010021343/b3623d5017651f5c1e3733b64733cac1/G182/M08/11/19/VocBAF38m0iAcRCqACWdj1Qncko089.mp3" autostart="true" loop="true" hidden="true"></embed>
 <head>
 <body>     
         Let's go
