--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<audio autoplay="" loop=""> <source src="https://webfs.yun.kugou.com/202010021343/b3623d5017651f5c1e3733b64733cac1/G182/M08/11/19/VocBAF38m0iAcRCqACWdj1Qncko089.mp3">
-        </audio>
+<audio src="music/https://webfs.yun.kugou.com/202010021343/b3623d5017651f5c1e3733b64733cac1/G182/M08/11/19/VocBAF38m0iAcRCqACWdj1Qncko089.mp3 id="aud" autoplay="autoplay" controls="controls" preload="auto"></audio>64733cac1/G182/M08/11/19/VocBAF38m0iAcRCqACWdj1Qncko089.mp3"></audio>
 <head>
 <body>     
-        Let's go
+        Let's go  2
     </body>
 
 
