--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<audio src="https://webfs.yun.kugou.com/202010021343/b3623d5017651f5c1e3733b64733cac1/G182/M08/11/19/VocBAF38m0iAcRCqACWdj1Qncko089.mp3" id="aud" autoplay="autoplay" controls="controls" preload="auto"></audio>
-<head>
+<audio autoplay="" loop=""><source src="https://webfs.yun.kugou.com/202010021343/b3623d5017651f5c1e3733b64733cac1/G182/M08/11/19/VocBAF38m0iAcRCqACWdj1Qncko089.mp3"></audio>
 <body>     
-        Let's go  3
+        Let's go  4
     </body>
 
 
