--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>      
-    <audio autoplay="" loop=""><source src="pkuchenyan.github.io/桥边姑娘.mp3"></audio>
-        Let's go  7
+ <embed　src="pkuchenyan.github.io/桥边姑娘.mp3
+"　autostart="true"　loop="true"　hidden="true"></embed>
+        Let's go  8
     </body>
 
 
