--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>      
- <embed　src="pkuchenyan.github.io/桥边姑娘.mp3"　autostart="true"　loop="true"　hidden="true"></embed>
-        Let's go  9
+<head>
+ <embed src="pkuchenyan.github.io/桥边姑娘.mp3" hidden="true" autostart="true" loop="true">
+
+ <body>      
+        Let's go  10
     </body>
 </html>
