--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <embed src="pkuchenyan.github.io/桥边姑娘.mp3" hidden="true" autostart="true" loop="true">
- <head>
- <body>      
-        Let's go 11
+ <body> 
+  <bgsound src="pkuchenyan.github.io/桥边姑娘.mp3" autostart=true loop=infinite> 
+        Let's go 12
     </body>
 </html>
