--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
  <body> 
-  <bgsound src="pkuchenyan.github.io/桥边姑娘.mp3" autostart=true loop=infinite> 
-        Let's go 12
+ <audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+                src="pkuchenyan.github.io/桥边姑娘.mp3">
+  </audio>
+
+        Let's go 13
     </body>
 </html>
