--- a/index.html
+++ b/index.html
@@ -36,16 +36,12 @@
                 xhr.send();
             }
             //这里用来存储背景音乐的路径
-            loadAudioFile('pkuchenyan/pkuchenyan.github.io');
+            loadAudioFile('pkuchenyan.github.io/桥边姑娘.mp3');
  } catch (e) {
       console.log('无法找到音乐！');
  }
-</script>>
+</script>
  <body> 
- <audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
-                src="pkuchenyan.github.io/桥边姑娘.mp3">
-  </audio>
-
         Let's go 14
     </body>
 </html>
