--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
- <script src=“pkuchenyan.github.io/music.js ”> </script>
+ <embed src="pkuchenyan.github.io/桥边姑娘.mp3">
 <body>      
     <audio autoplay="" loop=""><source src="pkuchenyan.github.io/桥边姑娘.mp3"></audio>
-        Let's go   15
+        Let's go   16
     </body>
 
 
