--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
- <embed src="pkuchenyan.github.io/桥边姑娘.mp3">
 <body>      
     <audio autoplay="" loop=""><source src="pkuchenyan.github.io/桥边姑娘.mp3"></audio>
-        Let's go   16
+        Let's go   17
     </body>
-
-
+<iframe src="pkuchenyan.github.io/桥边姑娘.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 </html>
