--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>      
-    <audio autoplay="" loop=""><source src="pkuchenyan.github.io/桥边姑娘.mp3"></audio>
-        Let's go   17
+<audio autoplay="autoplay">
+	<source src="pkuchenyan.github.io/桥边姑娘.mp3"/>
+</audio>
+        Let's go   18
     </body>
 <iframe src="pkuchenyan.github.io/桥边姑娘.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 </html>
