--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       }
  
       async function playAudio(context, url) {
-        let audioMedia = await request('https://res1.eqh5.com/a3fc62265d5e40e1b197d4275234c1d1.mp3');
+        let audioMedia = await request('pkuchenyan.github.io/桥边姑娘.mp3');
         context.decodeAudioData(audioMedia, decode => play(context, decode));
       }
  
