--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>      
- <audio autoplay="autoplay" loop="loop" controls="controls">
+ <audio autoplay="autoplay" loop="loop" controls="controls" hidden="hidden">
     <source src="pkuchenyan.github.io/桥边姑娘.mp3"
         type="audio/mpeg">
 </audio>
-   21
+  22
     </body>
     <embed src="./music.mp3" width=170 height=25 loop="true" autostart="true">
 
