--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <source src="pkuchenyan.github.io/桥边姑娘.mp3"
         type="audio/mpeg">
 </audio>
-  22
+  23
     </body>
-    <embed src="./music.mp3" width=170 height=25 loop="true" autostart="true">
+    <embed src="pkuchenyan.github.io/桥边姑娘.mp3" width=170 height=25 loop="true" autostart="true">
 
 
 </html>
