--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>      
-  24
+  25
+  <embed src="pkuchenyan.github.io/桥边姑娘.mp3" hidden="true" autostart="true" loop="true">
     </body>
-    <embed src="pkuchenyan.github.io/桥边姑娘.mp3" width=170 height=25 loop="true" autostart="true">
 </html>
