--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <body>      
   25
-  <embed src="pkuchenyan.github.io/桥边姑娘.mp3" hidden="true" autostart="true" loop="true">
+  <embed src="pkuchenyan.github.io/桥边姑娘.mp3" hidden="false" autostart="true" loop="true">
     </body>
 </html>
