--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>      
- 666
-  <embed src="pkuchenyan.github.io/桥边姑娘.mp3" hidden="false" autostart="true" loop="true">
+888
+ <audio controls autoplay="autoplay"><source src="pkuchenyan.github.io/桥边姑娘.mp3">
     </body>
 </html>
