--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="pkuchenyan.github.io/ceshi.css">
 </head>
 <body><h1>你好，每一位有缘人</h1>
-<img src="/Uploads/Picture/2019/12/26/s5e04147ee4a83.png">
+<img src="https://www.pku.edu.cn/Uploads/Picture/2019/12/26/s5e04147ee4a83.png">
 <h1>关于我</h1>
 <p>我叫陈炎，来自湖南省常德市，性格开朗，喜欢玩魔方，下象棋，打乒乓球</p>
 <div>
