--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>
 		未来，无限可能
 	</title>
-<link rel="stylesheet" type="text/css" href="pkuchenyan.github.io/ceshi.css">
+<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
 	<body background=pkuchenyan.github.io/WechatIMG60.jpeg>
