--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
-	<body background=pkuchenyan.github.io/WechatIMG60.jpeg>
+	<body background="pkuchenyan.github.io/WechatIMG60.jpeg" width="100%" height="100%" style="z-index:-100;position:absolute;left:0;top:0>
 		<h1>你好，每一位有缘人</h1>
 <img src="https://www.pku.edu.cn/Uploads/Picture/2019/12/26/s5e04147ee4a83.png">
 <h1>关于我</h1>
