--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>
 		未来，无限可能
 	</title>
+	<link rel="stylesheet" href="pkuchenyan.github.io/ceshi.css">
 </head>
 <body>
 	<body background="pkuchenyan.github.io/WechatIMG60.jpeg" >
