--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		未来，无限可能
 	</title>
 	<link rel="stylesheet" href="pkuchenyan.github.io/ceshi.css">
-        <audio controls autoplay="autoplay"><source src="pkuchenyan.github.io/qiaobianguniang.mp3"  loop=ture>
+        <audio controls autoplay="autoplay"><source src="pkuchenyan.github.io/qiaobianguniang.mp3"  loop=ture><audio>
 </head>
 <body>
 	<body background="pkuchenyan.github.io/WechatIMG60.jpeg" >
