--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<body background="pkuchenyan.github.io/WechatIMG60.jpeg" >
 		<h1>你好，每一位有缘人</h1>
 <img src="https://www.pku.edu.cn/Uploads/Picture/2019/12/26/s5e04147ee4a83.png">
-<h1>关于我</h1>
-<p>我叫陈炎，来自湖南省常德市，性格开朗，喜欢玩魔方，下象棋，打乒乓球</p>
+<h1 id=1>关于我</h1>
+<p id=2>我叫陈炎，来自湖南省常德市，性格开朗，喜欢玩魔方，下象棋，打乒乓球</p>
 <div>
-	<h1>我的第二阶段理想：创办中国的基因泰克</h1>
-<p>Nothing is impossible!年轻人，就要大胆追梦。虽然中国制药落后于世界许多，但是，这并不能成为我们安于现状的理由。既然美国制药的领头羊是基因泰克和吉利德，那么，中国的奋起直追就从中国的基因泰克开始吧！朋友，不要以为我在说相声，未来，由你我见证。
+	<h1 id=3>我的第二阶段理想：创办中国的基因泰克</h1>
+<p id=4>Nothing is impossible!年轻人，就要大胆追梦。虽然中国制药落后于世界许多，但是，这并不能成为我们安于现状的理由。既然美国制药的领头羊是基因泰克和吉利德，那么，中国的奋起直追就从中国的基因泰克开始吧！朋友，不要以为我在说相声，未来，由你我见证。
 </p>
 </div>
 </body>
