--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<link rel="stylesheet" href="pkuchenyan.github.io/ceshi.css">
 </head>
 <body>
+	<div style="position:fixed; bottom:0; right:0;">
+<audio controls="controls">
+<source src="pkuchenyan.github.ioqiaobianguniang.mp3" type="mp3">
+</audio>
+</div>
 	<body background="pkuchenyan.github.io/WechatIMG60.jpeg" >
 		<h1>你好，每一位有缘人</h1>
 <img src="https://www.pku.edu.cn/Uploads/Picture/2019/12/26/s5e04147ee4a83.png">
