--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 	<div style="position:fixed; bottom:0; right:0;">
-<audio controls autoplay="autoplay"><source src="pkuchenyan.github.ioqiaobianguniang.mp3"  loop=ture>
+<audio controls autoplay="autoplay">
+	<source src="pkuchenyan.github.io/qiaobianguniang.mp3"  loop=ture>
 </audio>
 </div>
 	<body background="pkuchenyan.github.io/WechatIMG60.jpeg" >
