--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
 <p id=b>我叫陈炎，来自湖南省常德市，性格开朗，喜欢玩魔方，下象棋，打乒乓球</p>
 <div>
 	<h1 id=c>我的第二阶段理想：创办中国的基因泰克</h1>
-	<img src="pkuchenyan.github.io/WechatIMG62.jpeg" width="500" height="500"/>
-<p id=d>Nothing is impossible!年轻人，就要大胆追梦。虽然中国制药落后于世界许多，但是，这并不能成为我们安于现状的理由。既然美国制药的领头羊是基因泰克和吉利德，那么，中国的奋起直追就从中国的基因泰克开始吧！朋友，不要以为我在说相声，未来，由你我见证。
+	<table><tr>
+<td><img src="pkuchenyan.github.io/WechatIMG62.jpeg" width="500" height="500"/></td>
+<td><img src="pkuchenyan.github.io/WechatIMG61.jpeg" width="500" height="500"/></td>
+</tr></table>
+<p id=d>Nothing is impossible!年轻人，就要大胆追梦。虽然中国制药落后于世界许多，但是，这并不能成为我们安于现状的理由。
+	既然美国制药的领头羊是基因泰克和吉利德，那么，中国的奋起直追就从中国的基因泰克开始吧！
+	朋友，不要以为我在说相声，未来，由你我见证。
 </p>
 </div>
 </body>
