--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 	既然美国制药的领头羊是基因泰克和吉利德，那么，中国的奋起直追就从中国的基因泰克开始吧！
 	朋友，不要以为我在说相声，未来，由你我见证。
 </p>
+	<img src="pkuchenyan.github.io/genetech.png" width="1000" height="1000"/>
+	<p id=e>欢迎大家请我吃鸡腿</p>
+	<img src="pkuchenyan.github.io/WechatIMG65.png" width="500" height="500"/>
 </div>
 </body>
 <html>
