--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		未来，无限可能
 	</title>
 	<link rel="stylesheet" href="pkuchenyan.github.io/ceshi.css">
+	<link rel="icon" sizes="any" mask="" href="//www.baidu.com/img/baidu_85beaf5496f291521eb75ba38eacbd87.svg">
 </head>
 <body>
 	<div style="position:fixed; bottom:0; right:0;">
@@ -33,5 +34,6 @@
 	<p id=e>欢迎大家请我吃鸡腿</p>
 	<img src="pkuchenyan.github.io/WechatIMG65.png" width="500" height="500"/>
 </div>
+		<script src=“pkuchenyan.github.io/ceshi.js”> </script>
 </body>
 <html>
