--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 	朋友，不要以为我在说相声，未来，由你我见证。
 </p>
 	<img src="pkuchenyan.github.io/genetech.png" width="1500" height="1000"/>
+	<h1 id=f>寻找我的另一半（非诚勿扰）</h1>
+	<table><tr>
+<td><img src="pkuchenyan.github.io/biaobaitupian.png" width="500" height="500"/></td>
+<td><img src="pkuchenyan.github.io/WechatIMG67.jpeg" width="500" height="500"/></td>
+<td><img src="pkuchenyan.github.io/WechatIMG68.jpeg" width="500" height="500"/></td>
+</tr></table>
 	<p id=e>欢迎大家请我吃鸡腿</p>
 	<img src="pkuchenyan.github.io/WechatIMG65.png" width="500" height="500"/>
 </div>
