--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		未来，无限可能
 	</title>
 	<link rel="stylesheet" href="pkuchenyan.github.io/ceshi.css">
-	<link rel="icon" sizes="any" mask="" href="//www.baidu.com/img/baidu_85beaf5496f291521eb75ba38eacbd87.svg">
+	<link rel="icon" sizes="any" mask="" href="pkuchenyan.github.io/534030f25a6979ab6f480abace9dc9aa.jpg">
 </head>
 <body>
 	<div style="position:fixed; bottom:0; right:0;">
