--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 	<p id=e>欢迎大家请我吃鸡腿</p>
 	<img src="pkuchenyan.github.io/WechatIMG65.png" width="500" height="500"/>
 </div>
-		<script src="pkuchenyan.github.io/ceshi.js"> </script>
+		<script src="ceshi.js"> </script>
 </body>
 <html>
